src/test/ui/traits/trait-bounds-on-structs-and-enums.stderr
error[E0277]: the trait bound `T: Trait` is not satisfied
  --> $DIR/trait-bounds-on-structs-and-enums.rs:13:9
   |
LL | struct Foo<T:Trait> {
   | ------------------- required by `Foo`
...
LL | impl<T> Foo<T> {
   |      -  ^^^^^^ the trait `Trait` is not implemented for `T`
   |      |
   |      help: consider restricting this bound: `T: Trait`

error[E0277]: the trait bound `isize: Trait` is not satisfied
  --> $DIR/trait-bounds-on-structs-and-enums.rs:19:5
   |
LL | struct Foo<T:Trait> {
   | ------------------- required by `Foo`
...
LL |     a: Foo<isize>,
   |     ^^^^^^^^^^^^^ the trait `Trait` is not implemented for `isize`

error[E0277]: the trait bound `usize: Trait` is not satisfied
  --> $DIR/trait-bounds-on-structs-and-enums.rs:23:10
   |
LL | enum Bar<T:Trait> {
   | ----------------- required by `Bar`
...
LL |     Quux(Bar<usize>),
   |          ^^^^^^^^^^ the trait `Trait` is not implemented for `usize`

error[E0277]: the trait bound `U: Trait` is not satisfied
  --> $DIR/trait-bounds-on-structs-and-enums.rs:27:5
   |
LL | struct Foo<T:Trait> {
   | ------------------- required by `Foo`
...
LL | struct Badness<U> {
   |                - help: consider restricting this bound: `U: Trait`
LL |     b: Foo<U>,
   |     ^^^^^^^^^ the trait `Trait` is not implemented for `U`

error[E0277]: the trait bound `V: Trait` is not satisfied
  --> $DIR/trait-bounds-on-structs-and-enums.rs:31:21
   |
LL | enum Bar<T:Trait> {
   | ----------------- required by `Bar`
...
LL | enum MoreBadness<V> {
   |                  - help: consider restricting this bound: `V: Trait`
LL |     EvenMoreBadness(Bar<V>),
   |                     ^^^^^^ the trait `Trait` is not implemented for `V`

error[E0277]: the trait bound `i32: Trait` is not satisfied
  --> $DIR/trait-bounds-on-structs-and-enums.rs:35:5
   |
LL | struct Foo<T:Trait> {
   | ------------------- required by `Foo`
...
LL |     Foo<i32>,
   |     ^^^^^^^^ the trait `Trait` is not implemented for `i32`

error[E0277]: the trait bound `u8: Trait` is not satisfied
  --> $DIR/trait-bounds-on-structs-and-enums.rs:39:22
   |
LL | enum Bar<T:Trait> {
   | ----------------- required by `Bar`
...
LL |     DictionaryLike { field: Bar<u8> },
   |                      ^^^^^^^^^^^^^^ the trait `Trait` is not implemented for `u8`

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0277`.
